--- a/frontend/news.html
+++ b/frontend/news.html
@@ -20,7 +20,7 @@
         <div class="news-list" id="news-list"></div>
         <aside class="news-sidebar">
             <div class="map-box">
-                <img src="assets/location.png" alt="map" style="width:100%;height:100%;object-fit:cover;display:block;" />
+                <img src="assets/location.jpg" alt="map" style="width:100%;height:100%;object-fit:cover;display:block;" />
             </div>
             <div class="alert-box">
                 <div>
