--- a/good/article.html
+++ b/good/article.html
@@ -13,7 +13,7 @@
 </head>
 
 <body data-page="article">
-    {header}
+    {goodheader}
     <main class="news-hero" style="max-width:700px; margin:auto; padding:2rem;">
         <h1 id="article-title" class="news-title">Loading...</h1>
         <p id="article-date" style="color: gray;"></p>
