--- a/extension/decipher.html
+++ b/extension/decipher.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <main>
-    <h1>Decipher</h1>
-    <textarea id="input" placeholder="Selected text will appear here"></textarea>
-    <button id="run">Decipher</button>
-    <pre id="output"></pre>
+    <h1 class="heading">Decipher</h1>
+    <textarea id="input" placeholder="Selected text will appear here" class="input"></textarea>
+    <button id="run" class="btn">Decipher</button>
+    <pre id="output" class="output"></pre>
   </main>
 </body>
 </html>
