--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     {header}
     <div class="hero">
         <h1 class="hero-title">Intelligentsia</h1>
-        <p class="hero-sub">For the fatherland. Not for tyrants.</p>
+        <p class="hero-sub">For the fatherland.</p>
     </div>
 
 
